# hybrid_cppy

./: CMakeLists.txt  README.md  build.sh  generate_data.py  run.sh  setup.sh  test.sh
data/: binary_data.npz  metadata.json
models/: simple_models.py
src/: main.cpp  tensor_engine.cpp  tensor_engine.h
